[package]
name = "tnua_test"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"
bevy-tnua = "0.21.0"
bevy-tnua-rapier3d = "0.9.0"
bevy_dylib = "0.15.3"
bevy_rapier3d = { version = "0.28.0", features = [
    "simd-stable",
    "debug-render-3d",
    "parallel",
] }
iyes_perf_ui = "0.4.0"
rand = "0.9.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
